@@ -41,6 +41,7 @@
 - fix null cache race.
 - fix cache_init() on source re-read.
 - fix mapent becomes negative during lookup.
+- check each dc server individually.
 
 03/09/2009 autofs-5.0.5
 -----------------------
